- Added an error for out of range immediate values in inline asm
- Fixed REG[] dereferencing
- Fixed a problem with passing pointers to pointers to functions
- Fixed a problem with subclasses in system module
- Fixed SIGNX and ZEROX operators to work like Spin2
- Fixed conflict of _clkfreq with CLKFREQ
- Fixed a problem with SEND of simple strings
- Fixed a problem with heap initialization in -O2
- Implemented mount() and getcwd()
- Implemented OPEN FOR in BASIC
- Implemented "public" and "private" keywords in C++ class declarations (they are currently ignored though).
- Reserved some COG memory in P2 mode

Version 4.1.8
- Added CALL and REG builtins for Spin2
- Fixed a problem with coginit of Spin functions which do not return a value
- Fixed using ADDBITS in bitfield expressions
- Fixed using foo.bar in PASM, and allowed foo#bar to refer to any
  kind of thing `bar` (so foo.bar and foo#bar are identical)
- Fixed a bug in transformation of longmove() to moves, and extended
  this to make many more longmoves() be automatically converted
- Use C++ enum scope for any .c files included as classes in other languages

Version 4.1.7
- Fixed a problem that could cause functions to be processed twice
- Fixed a problem with compiling FRAC with a non-register argument
- Fixed a problem with bitfield assignments
- Fixed return value of locktry

Version 4.1.6
- Added FILENAME_MAX to stdio.h
- Added some missing functions to libc.a
- Added a warning for some variable redefinitions
- Fixed a typo in implementation of rqpin
- Fixed BASIC instrrev function
- Fixed BYREF and BYVAL passing of arrays in BASIC
- Fixed some problems with Windows absolute paths
- Fixed a serious memory allocation issue which caused only 1/4 of the
  heap to actually be available
- Supported more Spin2 operators

Version 4.1.5
- Suppressed optimization of inline assembly inside ORG/END (but not ASM/ENDASM)
- Fixed some issues with compiling with the -C flag