@@ -7,6 +7,7 @@ Version 4.1.9
 - Fixed conflict of _clkfreq with CLKFREQ
 - Fixed a problem with SEND of simple strings
 - Fixed a problem with heap initialization in -O2
+- Fixed some issues with register operands in inline assembly
 - Implemented mount() and getcwd()
 - Implemented OPEN FOR in BASIC
 - Implemented "public" and "private" keywords in C++ class declarations (they are currently ignored though).
